alpkit: Add fields pcprefix and sonameprefix to Apkbuild

--- a/fixtures/aports/sample/APKBUILD
+++ b/fixtures/aports/sample/APKBUILD
@@ -23,6 +23,7 @@ triggers="$pkgname.trigger=/usr/share/sample/*"
 replaces="sample2"
 provides="sample2=$pkgver-r$pkgrel"
 provider_priority=100
+sonameprefix="smpl"
 subpackages="
 	$pkgname-doc
 	$pkgname-dev
