--- a/alpkit/Cargo.toml
+++ b/alpkit/Cargo.toml
@@ -37,7 +37,7 @@ process_control = { version = "4.0", optional = true }
 regex-lite = { version = "0.1", optional = true }
 # Due to https://github.com/serde-rs/serde/issues/2538
 serde = { version = "1.0, < 1.0.172", features = ["derive"] }
-serde_json = { version = "1.0", optional = true }
+serde_json = { version = "1.0", features = ["preserve_order"], optional = true }
 schemars = { git = "https://github.com/jirutka/schemars.git", branch = "vec-of-str-num-validation", features = ["derive"], optional = true }
 tar = { version = "0.4", default-features = false }
 thiserror = "1.0"
