--- a/alpkit/Cargo.toml
+++ b/alpkit/Cargo.toml
@@ -46,6 +46,7 @@ thiserror = "1.0"
 assert-json-diff = "2.0"
 assert2 = "0.3"
 indoc = "1.0"
+jsonschema = { version = "0.17", default-features = false, features = ["draft201909"] }
 serde_json = "1.0"
 
 [package.metadata.docs.rs]
